Fix border radius of logo on iOS

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -60,7 +60,7 @@
     max-height: 15vh;
     max-width: 15vw;
     margin: 1rem;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     border: 1px solid black;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
