--- a/pages/story.module.css
+++ b/pages/story.module.css
@@ -17,7 +17,7 @@
 .body {
     font-size: large;
     line-height: 1.6;
-    margin-top: 1rem;
+    margin: 1rem 0;
 }
 
 @media only screen and (min-width: 839px) {
